--- a/frontend/index.html
+++ b/frontend/index.html
@@ -325,7 +325,7 @@
       <div style="display: inline-block !important; visibility: visible !important; opacity: 1 !important; color: #ffffff !important; font-family: Arial, Helvetica, 'Microsoft YaHei', 'SimHei', sans-serif !important; font-size: 28px !important; font-weight: bold !important; line-height: 1.4 !important; text-shadow: 1px 1px 2px rgba(0,0,0,0.3) !important; margin: 0 !important; padding: 0 !important;">一秒解决你的论文格式问题！</div>
     </div>
     
-    <h1>论文格式自动修复</h1>
+    <h1 style="display: flex; align-items: baseline; gap: 0.5rem;">论文格式自动修复 <span style="font-size: 0.6em; color: #6b7280; font-weight: normal; white-space: nowrap;">v1.0.0</span></h1>
     <p class="small">流程：上传模板 → 上传您的文档 → 预览水印版 → 支付后下载正式版。</p>
 
     <section>
