--- a/frontend/index.html
+++ b/frontend/index.html
@@ -178,6 +178,15 @@
       .slogan-text {
         display: inline-block !important;
       }
+      .version-badge {
+        font-size: 0.5em;
+        color: #4338ca;
+        background: #eef2ff;
+        padding: 0.15rem 0.6rem;
+        border-radius: 9999px;
+        font-weight: 600;
+        white-space: nowrap;
+      }
     </style>
     <script>
       // 标语已经使用内联样式，不需要 JavaScript 处理
@@ -325,7 +334,7 @@
       <div style="display: inline-block !important; visibility: visible !important; opacity: 1 !important; color: #ffffff !important; font-family: Arial, Helvetica, 'Microsoft YaHei', 'SimHei', sans-serif !important; font-size: 28px !important; font-weight: bold !important; line-height: 1.4 !important; text-shadow: 1px 1px 2px rgba(0,0,0,0.3) !important; margin: 0 !important; padding: 0 !important;">一秒解决你的论文格式问题！</div>
     </div>
     
-    <h1 style="display: flex; align-items: baseline; gap: 0.5rem;">论文格式自动修复 <span style="font-size: 0.6em; color: #6b7280; font-weight: normal; white-space: nowrap;">v1.0.0</span></h1>
+    <h1 style="display: flex; align-items: baseline; gap: 0.75rem;">论文格式自动修复 <span class="version-badge">v1.0.0</span></h1>
     <p class="small">流程：上传模板 → 上传您的文档 → 预览水印版 → 支付后下载正式版。</p>
 
     <section>
