--- a/frontend/index.html
+++ b/frontend/index.html
@@ -180,12 +180,13 @@
       }
       .version-badge {
         font-size: 0.5em;
-        color: #4338ca;
-        background: #eef2ff;
+        color: #ffffff;
+        background: #dc2626;
         padding: 0.15rem 0.6rem;
         border-radius: 9999px;
         font-weight: 600;
         white-space: nowrap;
+        box-shadow: 0 2px 6px rgba(220, 38, 38, 0.25);
       }
     </style>
     <script>
