更新流程说明文字

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -336,7 +336,7 @@
     </div>
     
     <h1 style="display: flex; align-items: baseline; gap: 0.75rem;">论文格式自动修复 <span class="version-badge">v1.0.0</span></h1>
-    <p class="small">流程：上传模板 → 上传您的文档 → 预览水印版 → 支付后下载正式版。</p>
+    <p class="small">流程：先看第二步列表框有没有适合你的模版，没有则上传自己学校的模版，再上传自己的毕业论文，预览水印版，支付后下载正式版。</p>
 
     <section>
       <div class="card-title">
