fix: 更新预览页面（刷新GitHub时间戳）

--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文档预览 - 论文格式自动修复</title>
+    <!-- 最后更新: 2025-12-09 19:43 -->
     <style>
         * {
             margin: 0;
