添加工具说明：明确说明返回的是转换后的PDF文件

--- a/frontend/convert.html
+++ b/frontend/convert.html
@@ -247,7 +247,7 @@
 <body>
     <div class="container">
         <h1>📄 Word转PDF测试工具</h1>
-        <p class="subtitle">使用LibreOffice将Word文档转换为PDF</p>
+        <p class="subtitle">使用LibreOffice将Word文档转换为PDF<br><small style="color: #999; font-size: 12px; display: block; margin-top: 5px;">注意：此工具将Word文档转换为PDF格式，返回的是转换后的PDF文件，不是原始Word文档</small></p>
         
         <div class="upload-area" id="uploadArea">
             <div class="upload-icon">📤</div>
