--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -523,6 +523,11 @@
             }
             
             // 立即开始加载
+            tryLoadDocxPreview().catch(err => {
+                console.error('加载docx-preview失败:', err);
+            });
+            
+            // 立即开始加载
             tryLoadDocxPreview();
         })();
     </script>
